# nwo-skill-engine

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: agent_publishes_skill.py  full_skill_lifecycle.py  generate_and_publish_skill.py
scripts/: seed_builtins.py
skills/builtins/assembly_sequence/: assemble.py  manifest.json
skills/builtins/inter_agent_broadcast/: broadcast.py  manifest.json
skills/builtins/object_detection/: detect.py  manifest.json
skills/builtins/servo_calibration/: calibrate.py  manifest.json
src/: __init__.py
src/api/: main.py  routes.py
src/cli_tools/: __init__.py  cli.py
src/models/: __init__.py  database.py  manifest.py  orm.py  schemas.py
src/publisher/: __init__.py  publish.py
src/registry/: __init__.py  search.py
src/runtime/: __init__.py  executor.py
tests/: test_api.py  test_builtins.py  test_executor_and_search.py  test_manifest.py  test_publisher.py
