[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nwo-skill-engine"
version = "0.1.0"
description = "NWO Robotics Layer 4 — Agent Skill Files & Capability Publishing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "NWO Robotics", email = "dev@nworobotics.cloud" }]
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.3.2",
    "aiosqlite>=0.20.0",

    # Blob storage (skill payloads)
    "boto3>=1.34.0",

    # Manifest parsing + validation
    "jsonschema>=4.22.0",
    "semver>=3.0.2",          # Semantic version parsing

    # Runtime execution
    "docker>=7.1.0",          # Containerised skill execution
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",

    # Embeddings (semantic search, reuse L2 approach)
    "openai>=1.35.0",

    # Crypto / signing (reuse L2 approach)
    "cryptography>=42.0.0",

    # Data / config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "python-ulid>=2.2.0",
    "structlog>=24.2.0",

    # CLI
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
]

[project.scripts]
nwo-skill = "src.cli_tools.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
